# TaskMuse

./: .env.example  README.md  docker-compose.yml  fly.toml
.github/workflows/: backend.yml  mobile.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: celery_app.py  db.py  main.py  models.py  storage.py  tasks.py
backend/app/routers/: auth.py  tasks.py
backend/tests/: test_auth.py  test_healthz.py  test_nlp.py  test_push_token.py  test_scheduler.py  test_tasks.py
docs/: DESIGN.md  index.html  index.md
mobile/: App.tsx  AuthContext.tsx  package.json
mobile/api/: apiClient.ts
mobile/app/: _layout.tsx  index.tsx  login.tsx  register.tsx  voice-capture.tsx
mobile/app/(app)/: voice-capture.tsx
mobile/app/(app)/task/: [id].tsx
mobile/app/(auth)/: login.tsx  register.tsx
mobile/app/(tabs)/: _layout.tsx  analytics.tsx  inbox.tsx  index.tsx
mobile/app/onboarding/: _layout.tsx  first.tsx  second.tsx  third.tsx
mobile/app/task/: [id].tsx
mobile/hooks/: usePushToken.ts
mobile/screens/: Home.tsx  VoiceCapture.tsx
mobile/src/context/: AuthContext.tsx
mobile/ui/: Button.tsx  ThemeProvider.tsx  index.ts  theme.ts
services/: nlp.py  scheduler.py
