[tool.poetry]
name = "backend"
version = "0.1.0"
description = "TaskMuse backend"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.28"}
psycopg2-binary = "^2.9"
celery = "^5.3"
requests = "^2.31"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
